--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -174,8 +174,9 @@ header {
 }
 
 main {
-    height: 100%;
     overflow: auto;
+
+    height: 100%;
 }
 
 #tiles {
@@ -488,6 +489,7 @@ main {
 
 .col.tile section {
     display: grid;
+    grid-gap: 0.5rem;
 }
 
 .col.tile section>* {
@@ -504,16 +506,6 @@ main {
 
     text-align: center;
 }
-
-.col.tile section img {
-    aspect-ratio: 1/1;
-
-    width: 100%;
-    max-width: 150px;
-}
-
-
-
 
 .pagination {
     --bs-pagination-bg: transparent;
@@ -593,6 +585,13 @@ main {
     grid-area: a;
 }
 
+#main-weather img {
+    aspect-ratio: 1/1;
+
+    width: 100%;
+    max-width: 150px;
+}
+
 #main-weather section{
     grid-template: 
     "a b" 1fr
@@ -624,9 +623,12 @@ main {
 }
 
 #main-divination section{
-    grid-template: 
-    "a b" 1fr
-    "a b" 1fr / 1fr 1fr;
+    position: relative;
+    grid-template-areas:
+    "r1 r2 r3 r4 r5 r6"
+    "r7 r8 r9 r10 r11 r12 ";
+    grid-auto-rows: 1fr;
+    grid-auto-columns: 1fr;
 }
 
 #main-alert {
@@ -655,53 +657,181 @@ main {
 }
 
 
-.chanceRain{
+.chance-rain{
     display: flex;
 
     align-items: end;
     width: 100%;
     height: 100%;
 }
-.chanceRain:hover{
+.chance-rain:hover{
     background-color: rgba(var(--box-shadow-color)) !important;
 }
-.chanceRain > div{
+.chance-rain > div{
     width: 100%;
     background-color: rgba(var(--box-shadow-color));
     border-color: rgba(var(--box-shadow-color));
     border-style: solid;
     border-width: 1px
 }
-.chanceRain[data-percentage="100%"] > div{
+div[chance-rain="100%"] > div{
     height: 100%;
 }
-.chanceRain[data-percentage="90%"] > div{
+div[chance-rain="90%"] > div{
     height: 90%;
 }
-.chanceRain[data-percentage="80%"] > div{
+div[chance-rain="80%"] > div{
     height: 80%;
 }
-.chanceRain[data-percentage="70%"] > div{
+div[chance-rain="70%"] > div{
     height: 70%;
 }
-.chanceRain[data-percentage="60%"] > div{
+div[chance-rain="60%"] > div{
     height: 60%;
 }
-.chanceRain[data-percentage="50%"] > div{
+div[chance-rain="50%"] > div{
     height: 50%;
 }
-.chanceRain[data-percentage="40%"] > div{
+div[chance-rain="40%"] > div{
     height: 40%;
 }
-.chanceRain[data-percentage="30%"] > div{
+div[chance-rain="30%"] > div{
     height: 30%;
 }
-.chanceRain[data-percentage="20%"] > div{
+div[chance-rain="20%"] > div{
     height: 20%;
 }
-.chanceRain[data-percentage="10%"] > div{
+div[chance-rain="10%"] > div{
     height: 10%;
 }
-.chanceRain[data-percentage="0%"] > div{
+div[chance-rain="0%"] > div{
     height: 0%;
+}
+
+.sign .info{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.icons {
+    display: flex;
+    flex-direction: column;
+
+    justify-items: center;
+    align-items: center;
+}
+
+.lucky-item {
+    display: flex;
+    flex-direction: row !important;
+    
+    width: 100%;
+}
+
+.lucky-item>div {
+    display: flex;
+
+    width: 100%;
+}
+
+.lucky-item>div:first-child {
+    justify-content: start;
+}
+
+.lucky-item>div:last-child {
+    justify-content: end;
+}
+
+.lucky-color {
+    display: flex;
+    flex-direction: row !important;
+    
+    width: 100%;
+}
+
+.lucky-color>div {
+    display: flex;
+    width: 100%;
+}
+
+.lucky-color>div:first-child {
+    justify-content: start;
+}
+
+.lucky-color>div:last-child {
+    justify-content: end;
+}
+
+.lucky-stars{
+    display: flex;
+    flex-direction: row !important;
+}
+
+.stars{
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    align-items: center;
+}
+
+div[stars] {
+    display: flex;
+}
+
+div[stars]::before {
+    color: gold;
+}
+
+div[stars]::after {
+    color: gray;
+}
+
+div[stars="0"]::before {
+    content: "";
+}
+
+div[stars="0"]::after {
+    content: "★★★★★";
+}
+
+div[stars="1"]::before {
+    content: "★";
+}
+
+div[stars="1"]::after {
+    content: "★★★★";
+}
+
+div[stars="2"]::before {
+    content: "★★";
+}
+
+div[stars="2"]::after {
+    content: "★★★";
+}
+
+div[stars="3"]::before {
+    content: "★★★";
+}
+
+div[stars="3"]::after {
+    content: "★★";
+}
+
+div[stars="4"]::before {
+    content: "★★★★";
+}
+
+div[stars="4"]::after {
+    content: "★";
+}
+
+div[stars="5"]::before {
+    content: "★★★★★";
+}
+
+div[stars="5"]::after {
+    content: "";
 }
