--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap-icons.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/morning/main.css">
+    <link rel="stylesheet" href="../static/../static/morning/main.css">
 </head>
 
 <body>
@@ -146,27 +146,27 @@
                             <div id="chanceOfRainGraph">
                                 <div class="time" style="grid-area:aa;">100%</div>
                                 <div class="time" style="grid-area: t1;">0</div>
-                                <div class="chanceRain" style="grid-area: c1;" data-percentage="100%"
+                                <div class="chanceRain" style="grid-area: c1;" chance-rain="100%"
                                     data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{chanceOfRain_T00_06}"
-                                    th:data-percentage="*{chanceOfRain_T00_06}">
+                                    th:chance-rain="*{chanceOfRain_T00_06}">
                                     <div></div>
                                 </div>
                                 <div class="time" style="grid-area: t2;">6</div>
-                                <div class="chanceRain" style="grid-area: c2;" data-percentage="60%"
+                                <div class="chanceRain" style="grid-area: c2;" chance-rain="60%"
                                     data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{chanceOfRain_T06_12}"
-                                    th:data-percentage="*{chanceOfRain_T06_12}">
+                                    th:chance-rain="*{chanceOfRain_T06_12}">
                                     <div></div>
                                 </div>
                                 <div class="time" style="grid-area: t3;">12</div>
-                                <div class="chanceRain" style="grid-area: c3;" data-percentage="40%"
+                                <div class="chanceRain" style="grid-area: c3;" chance-rain="40%"
                                     data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{chanceOfRain_T12_18}"
-                                    th:data-percentage="*{chanceOfRain_T12_18}">
+                                    th:chance-rain="*{chanceOfRain_T12_18}">
                                     <div></div>
                                 </div>
                                 <div class="time" style="grid-area: t4;">18</div>
-                                <div class="chanceRain" style="grid-area: c4;" data-percentage="0%"
+                                <div class="chanceRain" style="grid-area: c4;" chance-rain="0%"
                                     data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{chanceOfRain_T18_24}"
-                                    th:data-percentage="*{chanceOfRain_T18_24}">
+                                    th:chance-rain="*{chanceOfRain_T18_24}">
                                     <div></div>
                                 </div>
                                 <div class="time" style="grid-area: t5;">24</div>
@@ -187,20 +187,126 @@
                     <!-- 運休情報の表示 -->
                     <div th:text="${flg} ? あり : なし"></div>
                 </div>
+
                 <!-- 占いメイン -->
                 <div class="col tile" id="main-divination" th:object="${HoroscopeEntity}">
                     <div class="title">占い</div>
-                    <section th:each="horo, stat : *{horoscopeList}" th:object="${horo}">
-                        <div th:if="${stat.first}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{info.sign}">
-                            <div>今日の1位</div>
-                            <img th:src="*{sign.resourcePng}">
-                            <span th:text="*{info.sign}"></span>
+                    <section hidden>
+                        <div class="sign" th:each="horo, stat : *{horoscopeList}" th:object="${horo}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="*{info.sign}" th:style="|grid-area: r*{info.rank};|">
+                            <div th:text="*{info.rank}" hidden></div>
+                            <img th:src="*{sign.resourceSvg}">
+                            <span th:text="*{info.sign}" hidden></span>
                         </div>
-                        <div th:unless="${stat.first}" data-bs-toggle="tooltip" data-bs-placement="top"
-                            th:title="*{info.sign}">
-                            <img th:src="*{sign.resourcePng}">
-                            <span th:text="*{info.sign}"></span>
+                    </section>
+                    <section id="test">
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="山羊座" style="grid-area: r1;">
+                            <div hidden="">1</div>
+                            <img src="../static/morning/capricorn.svg">
+                            <span hidden="">山羊座</span>
                         </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="水瓶座" style="grid-area: r2;">
+                            <div hidden="">2</div>
+                            <img src="../static/morning/aquarius.svg">
+                            <span hidden="">水瓶座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="双子座" style="grid-area: r3;">
+                            <div hidden="">3</div>
+                            <img src="../static/morning/gemini.svg">
+                            <span hidden="">双子座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="魚座" style="grid-area: r4;">
+                            <div hidden="">4</div>
+                            <img src="../static/morning/pisces.svg">
+                            <span hidden="">魚座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="乙女座" style="grid-area: r5;">
+                            <div hidden="">5</div>
+                            <img src="../static/morning/virgo.svg">
+                            <span hidden="">乙女座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="牡牛座" style="grid-area: r6;">
+                            <div hidden="">6</div>
+                            <img src="../static/morning/taurus.svg">
+                            <span hidden="">牡牛座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="蠍座" style="grid-area: r7;">
+                            <div hidden="">7</div>
+                            <img src="../static/morning/scorpio.svg">
+                            <span hidden="">蠍座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="射手座" style="grid-area: r8;">
+                            <div hidden="">8</div>
+                            <img src="../static/morning/sagittarius.svg">
+                            <span hidden="">射手座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="天秤座" style="grid-area: r9;">
+                            <div hidden="">9</div>
+                            <img src="../static/morning/libra.svg">
+                            <span hidden="">天秤座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="蟹座" style="grid-area: r10;">
+                            <div hidden="">10</div>
+                            <img src="../static/morning/cancer.svg">
+                            <span hidden="">蟹座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="獅子座" style="grid-area: r11;">
+                            <div hidden="">11</div>
+                            <img src="../static/morning/leo.svg">
+                            <span hidden="">獅子座</span>
+                        </div>
+                        <div class="sign" data-bs-toggle="tooltip" data-bs-placement="top" title="牡羊座" style="grid-area: r12;">
+                            <div hidden="">12</div>
+                            <img src="../static/morning/aries.svg">
+                            <div class="info" style="display: none;">
+                                <div class="icons">
+                                    <div>牡羊座の今日の運勢</div>
+                                    <img src="../static/morning/aries.svg">
+                                </div>
+                            
+                                <div class="lucky-stars">
+                                    <div class="stars">
+                                        <div>総合運</div>
+                                        <div th:starts="*{info.total}" stars="1"></div>
+                                    </div>
+                                    <div class="stars">
+                                        <div>恋愛運</div>
+                                        <div th:starts="*{info.love}" stars="2"></div>
+                                    </div>
+                                    <div class="stars">
+                                        <div>金運</div>
+                                        <div th:starts="*{info.gold}" stars="3"></div>
+                                    </div>
+                                    <div class="stars">
+                                        <div>仕事運</div>
+                                        <div th:starts="*{info.job}" stars="4"></div>
+                                    </div>
+                                </div>
+                            
+                                <div class="content">
+                                    あなた独自の魅力が光り、周りの人が魅了されていく日。自信をもって、自分自身のやるべきことに没頭してみて。背筋をシャンと伸ばすことで運気が上がり、気分良く一日を過ごせそうです。
+                                </div>
+                            
+                                <div class="lucky-item">
+                                    <div>
+                                        ラッキーアイテム
+                                    </div>
+                                    <div>
+                                        ラッピングペーパー
+                                    </div>
+                                </div>
+                                <div class="lucky-color">
+                                    <div>
+                                        ラッキーカラー
+                                    </div>
+                                    <div>
+                                        ワインレッド
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="dis">
+
                     </section>
                 </div>
 
